# backit

./: Cargo.toml  coms.md
backit-cli/: Cargo.toml
backit-cli/src/: main.rs
backit-core/: Cargo.toml
backit-core/src/: lib.rs  streams.rs
backitd/: Cargo.toml
backitd/src/: main.rs  p2p.rs
