[package]
name = "backitd"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
futures = "0.3.30"
libp2p = { version = "0.54.1", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
backit-core = { path = "../backit-core" }
sled = "0.34.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
interprocess = { version = "2.2.1", features = ["tokio"] }
thiserror = "1.0.64"

